[gd_scene load_steps=20 format=3 uid="uid://cf1yig2q6wh25"]

[ext_resource type="Script" uid="uid://0654cihmoj1x" path="res://scenes/tech/scr_battle.gd" id="1_5j3jy"]
[ext_resource type="Resource" uid="uid://c0ncj8xjt5dma" path="res://resources/battle_infos/grandma_bossfight.tres" id="2_2esdu"]
[ext_resource type="PackedScene" uid="uid://ekxwo70dmot1" path="res://scenes/tech/scn_camera.tscn" id="2_hinxn"]
[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="3_v2dlj"]
[ext_resource type="Script" uid="uid://cwn4t0ihelf1" path="res://code/scr_even_spread.gd" id="4_3v3ux"]
[ext_resource type="Script" uid="uid://cmin2i5j7iysd" path="res://scenes/tech/scr_reference_button.gd" id="4_ht2pp"]
[ext_resource type="PackedScene" uid="uid://u7uuutmsqq0r" path="res://scenes/gui/scn_message_container.tscn" id="4_vhvdj"]
[ext_resource type="Texture2D" uid="uid://cvy1i8jmiqbbb" path="res://sprites/characters/portraits/spr_portrait_greg.png" id="5_kl5pr"]
[ext_resource type="PackedScene" uid="uid://bsrntxiwcuv2v" path="res://scenes/gui/scn_battle_member_info.tscn" id="7_is2uq"]
[ext_resource type="Texture2D" uid="uid://k1pgpa3hgoas" path="res://sprites/gui/spr_effects.png" id="8_teagk"]
[ext_resource type="PackedScene" uid="uid://cami7pi4o2hiw" path="res://scenes/gui/scn_screen_dance_battle.tscn" id="9_sbskt"]
[ext_resource type="Script" uid="uid://dkf3yix03l3hc" path="res://code/scr_cheat_node.gd" id="10_7y584"]
[ext_resource type="Script" uid="uid://5ft3meh2ry86" path="res://code/scr_autoscroll_component.gd" id="11_jcqcf"]
[ext_resource type="AudioStream" uid="uid://3xpaekbolixj" path="res://sounds/gui.ogg" id="13_putf3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t32me"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfnon"]
atlas = ExtResource("8_teagk")
region = Rect2(0, 6, 6, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6aa0q"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0, 0.74902, 0.945098, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 4
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 2.603

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8778k"]
bg_color = Color(0.235294, 0.686275, 0.592157, 0.203922)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o50qe"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_5j3jy")
load_options = ExtResource("2_2esdu")

[node name="Camera" parent="." instance=ExtResource("2_hinxn")]
ignore_rotation = false

[node name="Party" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource("4_3v3ux")
radius = 110.0
instant = false

[node name="Background" type="Node2D" parent="."]
z_index = -88
position = Vector2(-80, -60)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 120.0
theme = ExtResource("3_v2dlj")

[node name="MessageContainer" parent="UI" instance=ExtResource("4_vhvdj")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = -7.0
offset_right = 153.0
offset_bottom = 33.0
life_time = 1.5

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 0
offset_top = 76.0
offset_right = 160.0
offset_bottom = 120.0

[node name="ScreenMainActions" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
offset_right = 160.0
offset_bottom = 44.0

[node name="CurrentInfo" parent="UI/Panel/ScreenMainActions" instance=ExtResource("7_is2uq")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 43.0
offset_top = 1.0
offset_right = 99.0
offset_bottom = 25.0

[node name="Portrait" parent="UI/Panel/ScreenMainActions/CurrentInfo" index="0"]
offset_left = 2.0
offset_right = 24.0
texture = ExtResource("5_kl5pr")

[node name="Name" parent="UI/Panel/ScreenMainActions/CurrentInfo" index="1"]
offset_left = -90.0
offset_top = 56.0
offset_right = -60.0
offset_bottom = 67.0

[node name="HealthBar" parent="UI/Panel/ScreenMainActions/CurrentInfo" index="3"]
self_modulate = Color(1, 1, 1, 0.388235)
offset_left = 43.0
offset_top = 25.0
offset_right = 116.0
offset_bottom = 31.0

[node name="MagicBar" parent="UI/Panel/ScreenMainActions/CurrentInfo" index="4"]
self_modulate = Color(1, 1, 1, 0.388235)
offset_left = 43.0
offset_top = 33.0
offset_right = 116.0
offset_bottom = 39.0

[node name="WaitBar" parent="UI/Panel/ScreenMainActions/CurrentInfo" index="5"]
offset_left = -90.0
offset_top = 65.0
offset_right = -60.0
offset_bottom = 67.0

[node name="AnimalBar" parent="UI/Panel/ScreenMainActions/CurrentInfo" index="6"]
visible = false

[node name="EffectsContainer" parent="UI/Panel/ScreenMainActions/CurrentInfo" index="8"]
offset_left = 92.0
offset_right = 127.0

[node name="DescriptionText" type="RichTextLabel" parent="UI/Panel/ScreenMainActions"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 0
offset_top = -8.0
offset_right = 160.0
theme_override_styles/normal = SubResource("StyleBoxFlat_t32me")
text = "descriptions go here"
scroll_active = false

[node name="ButtonsContainer" type="VBoxContainer" parent="UI/Panel/ScreenMainActions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 43.0
offset_bottom = 42.0
theme_override_constants/separation = 1
alignment = 1

[node name="AttackButton" type="Button" parent="UI/Panel/ScreenMainActions/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../ItemButton")
focus_neighbor_bottom = NodePath("../SpiritButton")
focus_next = NodePath("../SpiritButton")
focus_previous = NodePath("../ItemButton")
mouse_filter = 2
text = "tussle"
text_overrun_behavior = 3
clip_text = true
script = ExtResource("4_ht2pp")
description = "go in with your %s"

[node name="SpiritButton" type="Button" parent="UI/Panel/ScreenMainActions/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../AttackButton")
focus_neighbor_bottom = NodePath("../ItemButton")
focus_next = NodePath("../ItemButton")
focus_previous = NodePath("../AttackButton")
mouse_filter = 2
text = "spirit"
text_overrun_behavior = 3
clip_text = true
script = ExtResource("4_ht2pp")
description = "maybe magic solves this"

[node name="ItemButton" type="Button" parent="UI/Panel/ScreenMainActions/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../SpiritButton")
focus_neighbor_bottom = NodePath("../AttackButton")
focus_next = NodePath("../AttackButton")
focus_previous = NodePath("../SpiritButton")
mouse_filter = 2
text = "object"
text_overrun_behavior = 3
clip_text = true
script = ExtResource("4_ht2pp")
description = "dig through your pockets"

[node name="StatusEffectsList" type="VBoxContainer" parent="UI/Panel/ScreenMainActions"]
layout_mode = 0
offset_left = 2.0
offset_top = 44.0
offset_right = 163.0
offset_bottom = 110.0
theme_override_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/ScreenMainActions/StatusEffectsList"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="UI/Panel/ScreenMainActions/StatusEffectsList/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_sfnon")
stretch_mode = 2

[node name="Label" type="Label" parent="UI/Panel/ScreenMainActions/StatusEffectsList/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "inspiration lvl 33 for 33 turns"
clip_text = true

[node name="CharInfo1" type="RichTextLabel" parent="UI/Panel/ScreenMainActions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 45.0
offset_top = 26.0
offset_right = 85.0
offset_bottom = 42.0
bbcode_enabled = true
text = "gregtech
lvl 3"
scroll_active = false
autowrap_mode = 0

[node name="CharInfo2" type="RichTextLabel" parent="UI/Panel/ScreenMainActions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 86.0
offset_top = 2.0
offset_right = 144.0
offset_bottom = 42.0
bbcode_enabled = true
text = "atk: 3
def: 3
spd: 3
hp: 100/100
sp: 100/100"
scroll_active = false
autowrap_mode = 0

[node name="ScreenListSelect" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 0
offset_right = 160.0
offset_bottom = 60.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Panel/ScreenListSelect"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 95.0
offset_bottom = 59.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ListContainer" type="HBoxContainer" parent="UI/Panel/ScreenListSelect/ScrollContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_constants/separation = 1

[node name="Left" type="VBoxContainer" parent="UI/Panel/ScreenListSelect/ScrollContainer/ListContainer"]
layout_mode = 2

[node name="Right" type="VBoxContainer" parent="UI/Panel/ScreenListSelect/ScrollContainer/ListContainer"]
layout_mode = 2

[node name="SelectedGuy" parent="UI/Panel/ScreenListSelect" instance=ExtResource("7_is2uq")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 164.0
offset_top = 3.0
offset_right = 225.0
offset_bottom = 59.0

[node name="Portrait" parent="UI/Panel/ScreenListSelect/SelectedGuy" index="0"]
offset_left = -28.0
offset_top = 28.0
offset_right = -6.0
offset_bottom = 50.0

[node name="Name" parent="UI/Panel/ScreenListSelect/SelectedGuy" index="1"]
offset_left = 2.0
offset_right = 75.0

[node name="HealthBar" parent="UI/Panel/ScreenListSelect/SelectedGuy" index="3"]
offset_left = -163.0
offset_top = 51.0
offset_right = -5.0
offset_bottom = 53.0

[node name="MagicBar" parent="UI/Panel/ScreenListSelect/SelectedGuy" index="4"]
offset_left = -163.0
offset_top = 54.0
offset_right = -5.0
offset_bottom = 56.0

[node name="WaitBar" parent="UI/Panel/ScreenListSelect/SelectedGuy" index="5"]
layout_mode = 0
offset_left = -163.0
offset_top = 53.0
offset_right = -5.0
offset_bottom = 54.0

[node name="AnimalBar" parent="UI/Panel/ScreenListSelect/SelectedGuy" index="6"]
offset_left = -163.0
offset_top = 50.0
offset_right = -5.0
offset_bottom = 51.0

[node name="EffectsContainer" parent="UI/Panel/ScreenListSelect/SelectedGuy" index="8"]
offset_left = -28.0
offset_top = 28.0
offset_right = -6.0
offset_bottom = 50.0

[node name="ScreenItemSelect" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 0
offset_right = 160.0
offset_bottom = 60.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Panel/ScreenItemSelect"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 80.0
offset_bottom = 59.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="List" type="VBoxContainer" parent="UI/Panel/ScreenItemSelect/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ItemInfoLabel" type="RichTextLabel" parent="UI/Panel/ScreenItemSelect"]
layout_mode = 0
offset_left = 80.0
offset_top = 1.0
offset_right = 159.0
offset_bottom = 59.0
bbcode_enabled = true
scroll_active = false

[node name="AutoscrollComponent" type="Node" parent="UI/Panel/ScreenItemSelect/ItemInfoLabel" node_paths=PackedStringArray("target")]
script = ExtResource("11_jcqcf")
target = NodePath("..")

[node name="ScreenPartyInfo" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 159.0
offset_bottom = 26.0

[node name="Container" type="HBoxContainer" parent="UI/Panel/ScreenPartyInfo"]
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 158.0
offset_bottom = 26.0
theme_override_constants/separation = -4

[node name="MemberInfo" parent="UI/Panel/ScreenPartyInfo/Container" instance=ExtResource("7_is2uq")]
layout_mode = 2

[node name="MemberInfo2" parent="UI/Panel/ScreenPartyInfo/Container" instance=ExtResource("7_is2uq")]
layout_mode = 2

[node name="MemberInfo3" parent="UI/Panel/ScreenPartyInfo/Container" instance=ExtResource("7_is2uq")]
layout_mode = 2

[node name="ScreenSpiritName" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_top = -39.0
offset_right = 160.0
offset_bottom = 1.0

[node name="SpiritName" type="LineEdit" parent="UI/Panel/ScreenSpiritName"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 3.0
offset_top = 10.0
offset_right = 157.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 0, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_6aa0q")
theme_override_styles/read_only = SubResource("StyleBoxFlat_8778k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o50qe")
placeholder_text = "speak a name"
alignment = 1
max_length = 28
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false

[node name="SpiritSpeakTimerProgress" type="ProgressBar" parent="UI/Panel/ScreenSpiritName"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 34.0
offset_right = 160.0
offset_bottom = 35.0
value = 100.0
show_percentage = false

[node name="SpiritSpeakTimer" type="Timer" parent="UI/Panel/ScreenSpiritName"]
unique_name_in_owner = true
process_callback = 0
one_shot = true

[node name="ScreenEnd" type="Control" parent="UI/Panel"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 159.0
offset_bottom = 59.0

[node name="VictoryText" type="RichTextLabel" parent="UI/Panel/ScreenEnd"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 27.0
offset_right = 158.0
offset_bottom = 53.0
bbcode_enabled = true
text = "
[center][color=#ff8800]victory![/color]
all enemies defeated.[/center]"
visible_characters_behavior = 1

[node name="ScreenDanceBattle" parent="UI/Panel" instance=ExtResource("9_sbskt")]
visible = false
layout_mode = 0
offset_top = 0.0
offset_bottom = 44.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource("13_putf3")
max_polyphony = 66
bus = &"ECHO"

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
fill_mode = 4

[node name="SlowUpdateTimer" type="Timer" parent="."]
wait_time = 0.07

[node name="CheatNode" type="Node" parent="."]
script = ExtResource("10_7y584")
level_gain = 85
new_spirits = Array[StringName]([&"hotel", &"peptide", &"peanuts", &"personally", &"roundup", &"mooncity"])
new_items = Array[StringName]([&"diploma", &"sugar_lemon", &"cough_syrup", &"cough_syrup", &"porridge", &"cellphone", &"bike_bell", &"pills", &"salt", &"pills", &"plaster", &"bike_helmet", &"plaster", &"sugar_lemon", &"egg", &"cough_syrup", &"egg", &"egg", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"egg", &"gummy_worm", &"egg", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"egg", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"pills", &"plaster", &"brick", &"gummy_worm", &"gummy_worm", &"sugar_lemon", &"gummy_worm", &"cough_syrup", &"gummy_worm", &"bread", &"bread", &"gummy_worm", &"gummy_worm", &"rain_boot", &"gummy_fish", &"gummy_worm", &"bread", &"bike_bell", &"plaster", &"gummy_worm", &"bread", &"gummy_worm", &"gummy_worm", &"cough_syrup", &"gummy_worm", &"pills", &"bread", &"magnet", &"water_balloon", &"gummy_fish", &"water_balloon", &"bread", &"gummy_worm", &"mueslibar", &"mueslibar", &"cough_syrup", &"gummy_worm", &"gummy_worm", &"sugar_lemon", &"tape", &"gummy_worm", &"plaster", &"bread", &"mueslibar", &"mueslibar", &"mueslibar", &"gummy_worm", &"pills", &"frankling_badge", &"bread", &"gummy_worm", &"pizz", &"soda", &"soda", &"soda", &"soda", &"soda", &"ash_bucket", &"magnet", &"bread", &"gummy_worm", &"gummy_fish", &"gummy_fish", &"gummy_fish", &"bread", &"gummy_fish", &"bread", &"water_balloon", &"mueslibar", &"bread", &"bread", &"gummy_worm", &"tape", &"glue", &"muesli", &"pills", &"plaster", &"plaster", &"gummy_worm", &"sugar_lemon", &"gummy_worm", &"bread", &"gummy_worm", &"gummy_worm", &"gummy_fish", &"plaster", &"plaster", &"eggshell", &"bread", &"eggshell", &"sleepy_flower", &"eggshell", &"gummy_fish", &"sleepy_flower", &"gummy_fish", &"free_hugs_coupon", &"lighter", &"lighter", &"lighter", &"lighter", &"frankling_badge"])
replace_items = Array[StringName]([&"mueslibar", &"mueslibar", &"mueslibar", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"gummy_worm", &"gummy_fish", &"gummy_fish", &"gummy_fish", &"gummy_fish", &"gummy_fish", &"pills", &"tape", &"tape", &"plaster", &"plaster", &"plaster", &"plaster", &"plaster", &"cellphone", &"frozen_meat", &"antifreeze", &"water_balloon", &"water_balloon", &"soda", &"soda", &"soda", &"fish", &"tumbler", &"tumbler", &"pocket_candy", &"pocket_candy", &"pocket_candy"])
replace_armour = &"cool_jacket"
replace_weapon = &"shovel"
force_spirits_into_use = true
data_overrides = Dictionary[StringName, Variant]({
&"bike_ghosts_fought": [1, 0],
&"gdung_floor": -1,
&"nr": 0.67
})

[editable path="UI/Panel/ScreenMainActions/CurrentInfo"]
[editable path="UI/Panel/ScreenListSelect/SelectedGuy"]
